--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/atommarvel/daydash#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.10.0"
   }
 }
