--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,12 @@
   },
   "chrome_url_overrides" : {
     "newtab": "index.html"
-  }
+  },
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
+  "permissions": [
+    "storage"
+  ]
 }
