--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "moment": "^2.20.1"
   }
 }
