--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.10.0"
+    "fs-extra": "^5.0.0",
+    "npm": "^5.8.0",
+    "webpack": "^3.10.0",
+    "zip-folder": "^1.0.0"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
