--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "del": "^3.0.0",
-    "fs-extra": "^5.0.0",
     "gulp": "^4.0.0",
     "gulp-zip": "^4.1.0",
     "npm": "^5.8.0",
-    "webpack": "^3.10.0",
-    "zip-folder": "^1.0.0"
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
